--- a/mod2_solution/css/styles.css
+++ b/mod2_solution/css/styles.css
@@ -1,26 +1,81 @@
+
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 .row {
   margin-bottom: 15px;
 }
 .row > div {
-  border: 2px solid red;
+  border: 2px solid black;
   background-color: gray;
+  position: relative;
 }
-{
-  box-sizing: border-box;
-}
+
+
 h1 {
-  margin-bottom: 15px;
+  margin-bottom: 25px;
+  font-family: Helvetica;
+}
+
+#chicken {
+  border: 1px solid black;
+  background-color: #F7649A;
+  width: 8%;
+  padding: 3px 3px 4px 4px;
+  font-family: Helvetica;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  position: absolute;
+  right: 0px;
+}
+
+
+#beef {
+  border: 1px solid black;
+  background-color: #FF0000;
+  width: 8%;
+  padding: 3px 3px 4px 4px;
+  font-family: Helvetica;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  position: absolute;
+  right: 0px;
+}
+
+#sushi {
+  border: 1px solid black;
+  background-color: #EEF764;
+  width: 8%;
+  padding: 3px 3px 4px 4px;
+  font-family: Helvetica;
+  color: black;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  position: absolute;
+  right: 0px;
 }
 
 p {
-  border: 1px solid black;
-  background-color: #A52A2A;
-  width: 90%;
-  height: 150px;
+  padding-top: 30px;
   margin-right: auto;
   margin-left: auto;
   font-family: Helvetica;
-  color: white;
+  font-size: 14px;
+  color: black;
+}
+
+
+#p2 {
+  background-color: #DEB887;
+  width: 50px;
+  height: 50px;
 }
 
 /* Simple Responsive Framework. */
