Small changes in CSS file

--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -135,6 +135,20 @@ h4.menu-item-title {
 /* Extra small devices only*/
 @media (max-width: 767px) {
 	
+  /* Header */
+  .navbar-brand {
+    padding-top: 10px;
+    height: 20px;
+  }
+  .navbar-brand h1 { /* Restaurant name */
+    padding-top: 10px;
+    font-size: 5vw; /* 1vw = 1% of viewport width */
+  }
+  
+  #collapsable-nav a span {
+    font-size: 1em;
+    margin-right: 5px;
+  }
 
 
   #menu-tile, #specials-tile {
